--- a/globe.html
+++ b/globe.html
@@ -10,12 +10,13 @@
                 position: absolute;
                 top: 0;
                 right: 0;
-                width: 160px;
-                height: 50px;
+                width: 300px;
+                height: 80px;
 
                 background: rgb(94, 92, 92);
                 color: #ffffff;
                 font-size: 14px;
+                text-align: center;
             }
         </style>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,7 +26,10 @@
             <span class="divScaleWidget"> Scale </span>
             </div>
         </div>
-        <div id="eventTip">Please double click to select point</div>
+        <div id="eventTip">
+            <p>Please double click to select point.</p>
+            <p>distance: <span id="distanceResult"></span></p>
+        </div>
         <script src="itowns/itowns.js"></script>
         <script src="tools/measure.js"></script>
         <script type="text/javascript">
