--- a/orthographic.html
+++ b/orthographic.html
@@ -10,19 +10,23 @@
                 position: absolute;
                 top: 0;
                 right: 0;
-                width: 160px;
+                width: 300px;
                 height: 80px;
 
                 background: rgb(94, 92, 92);
                 color: #ffffff;
                 font-size: 14px;
+                text-align: center;
             }
         </style>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div id="viewerDiv"></div>
-        <div id="eventTip">Please double click to select point</div>
+        <div id="eventTip">
+            <p>Please double click to select point.</p>
+            <p>distance: <span id="distanceResult"></span></p>
+        </div>
         <script src="itowns/itowns.js"></script>
         <script src="tools/measure.js"></script>
         <script type="text/javascript">
